DevOps/infra/prod/jenkins.tf
resource "aws_instance" "yimby-prod-jenkins" {
  ami                    = data.aws_ami.ubuntu-arm64.id
  instance_type          = "t4g.large"
  key_name               = "yimby-prod-key"
  subnet_id              = module.yimby-prod-vpc.private_subnets[0]
  vpc_security_group_ids = [aws_security_group.yimby-prod-jenkins-sg.id]


  iam_instance_profile = aws_iam_instance_profile.yimby-prod-instance-profile.name

  root_block_device {
    volume_size           = "40"
    volume_type           = "gp3"
    delete_on_termination = "false"

    tags = {
      Name    = "${local.name}-jenkins-volume"
      Env     = local.tags.Env
      Project = local.tags.Project
    }

  }

  lifecycle {
    prevent_destroy = true
    ignore_changes = [
      ami
    ]
  }

  disable_api_termination = "true"


  user_data = <<-EOF
                #!/bin/bash
                sudo apt update -y
                sudo apt-get install openjdk-17-jdk -y
                wget -q -O - https://pkg.jenkins.io/debian/jenkins-ci.org.key | sudo apt-key add -
                sudo sh -c 'echo deb http://pkg.jenkins.io/debian-stable binary/ > /etc/apt/sources.list.d/jenkins.list'
                sudo apt update -y && sudo apt upgrade -y
                sudo apt install jenkins -y
                sudo systemctl start jenkins
                sudo systemctl enable jenkins

                sudo apt install docker.io -y
                sudo chmod 777 /var/run/docker.sock

                sudo apt install unzip -y

                curl "https://awscli.amazonaws.com/awscli-exe-linux-aarch64.zip" -o "awscliv2.zip"
                unzip awscliv2.zip
                sudo ./aws/install
                
                EOF

  tags = {
    Name    = "${local.name}-jenkins"
    Env     = local.tags.Env
    Project = local.tags.Project
  }
}
